cabal-version:      2.4
name:               schat
version:            0.1.0.0
homepage:           https://github.com/morucci/schat/README.md
bug-reports:        https://github.com/morucci/schat/issues
synopsis:           HTMX Playground
description:        HTMX PLayground
license-file:       LICENSE
author:             Fabien Boucher
maintainer:         fabien.dot.boucher@gmail.com
copyright:          2022 Fabien Boucher
extra-source-files:
    README.md

common common-options
    default-language: Haskell2010
    default-extensions: LambdaCase
                      , NoImplicitPrelude
                      , OverloadedStrings
                      , RecordWildCards
                      , NamedFieldPuns
                      , DeriveGeneric
                      , DataKinds
                      , OverloadedRecordDot
                      , QuasiQuotes
                      , TypeOperators
    ghc-options:      -Wall
                      -threaded

    build-depends:    base < 5

library
    import:           common-options
    exposed-modules:  Chat
    build-depends:    servant
                    , servant-lucid
                    , servant-server
                    , servant-websockets
                    , servant-xstatic
                    , lucid
                    , lucid-xstatic
                    , string-interpolate
                    , aeson
                    , async
                    , lens
                    , lens-aeson
                    , text
                    , time
                    , safe-exceptions
                    , stm
                    , http-api-data
                    , wai
                    , warp
                    , websockets
                    , xstatic
                    , xstatic-hyperscript
                    , xstatic-htmx
                    , xstatic-tailwind
    hs-source-dirs:   src

executable schat
    import:           common-options
    main-is:          Main.hs

    build-depends:    schat

    hs-source-dirs:   app
    default-language: Haskell2010
